--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.8",
     "@react-email/components": "^0.0.36",
+    "@stripe/stripe-js": "^7.1.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -42,6 +43,7 @@
     "react-hook-form": "^7.55.0",
     "resend": "^4.3.0",
     "sonner": "^2.0.3",
+    "stripe": "^18.0.0",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
     "uuid": "^11.1.0",
